--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-  color: #F6AE2D;
+  color: #aebc3d;
   font-variation-settings: 'wght' 600;
   line-height: 1.1em;
   letter-spacing: -0.045em;
@@ -33,7 +33,7 @@ p {
 }
 
 .navbar {
-  background-color: #F6AE2D;
+  background-color: #aebc3d;
   z-index: 100;
 }
 
@@ -66,7 +66,7 @@ p {
 .home {
   padding-top: 140px;
   padding-bottom: 60px;
-  background-color: #F6AE2D;
+  background-color: #aebc3d;
 }
 
 h1 {
@@ -77,7 +77,7 @@ h1 {
 }
 
 h1 span {
-  color: #0E402D;
+  color: #510e06;
 }
 
 .home-info {
@@ -93,15 +93,15 @@ h1 span {
 }
 
 .links a {
-  color: #0E402D;
+  color: #510e06;
   font-size: 1.7rem;
   padding: 0.5rem 1rem;
 }
 
 .cv, .card-links a {
-  color: #0E402D;
+  color: #510e06;
   text-decoration: none;
-  border-bottom: 2.5px solid #0E402D;
+  border-bottom: 2.5px solid #510e06;
   padding: 0.4rem 1rem;
   font-weight: 600;
   font-size: 0.9rem;
@@ -109,7 +109,7 @@ h1 span {
 
 .cv:hover, .card-links a:hover {
   color: #ffff;
-  background-color: #0E402D;
+  background-color: #510e06;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   border-radius: 3px;
@@ -142,7 +142,7 @@ h1 span {
 .projects {
   text-align: center;
   padding: 100px 0;
-  background-color: #0E402D;
+  background-color: #510e06;
 }
 
 .projects h2, .projects p {
@@ -164,13 +164,13 @@ h1 span {
 
 .card-links a {
   margin-right: 1rem;
-  color: #ffff;
-  border-bottom: 2.5px solid #F6AE2D;
+  color: #aebc3d;
+  border-bottom: 2.5px solid #aebc3d;
 }
 
 .card-links a:hover {
-  color: #0E402D;
-  background-color: #F6AE2D;
+  color: #ffff;
+  background-color: #aebc3d;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   border-radius: 3px;
@@ -183,42 +183,42 @@ h1 span {
 
 .form-control {
   border: none;
-  border-bottom: #F6AE2D solid 2px;
+  border-bottom: #aebc3d solid 2px;
   border-radius: 0;
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #F6AE2D;
+  color: #aebc3d;
   font-weight: 600;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #F6AE2D;
+  color: #aebc3d;
   font-weight: 600;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #F6AE2D;
+  color: #aebc3d;
   font-weight: 600;
 }
 
 .form-control::placeholder {
-  color: #F6AE2D;
+  color: #aebc3d;
   font-weight: 600;
 }
 
 .form-control:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
-  border-bottom: #F6AE2D solid 2px;
+  border-bottom: #aebc3d solid 2px;
 }
 
 #button {
   background-color: transparent;
   border: none;
-  color: #0E402D;
+  color: #510e06;
   text-decoration: none;
-  border-bottom: 2.5px solid #0E402D;
+  border-bottom: 2.5px solid #510e06;
   padding: 0.4rem 1rem;
   font-weight: 600;
   font-size: 0.9rem;
@@ -226,14 +226,14 @@ h1 span {
 
 #button:hover {
   color: #ffff;
-  background-color: #0E402D;
+  background-color: #510e06;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   border-radius: 3px;
 }
 
 .footer {
-  background-color: #F6AE2D;
+  background-color: #aebc3d;
   padding: 50px 0;
   text-align: center;
 }
@@ -243,7 +243,7 @@ h1 span {
 }
 
 .footer p {
-  color: #0E402D;
+  color: #510e06;
 }
 
 @media (min-width: 768px) {
