--- a/css/style.scss
+++ b/css/style.scss
@@ -4,9 +4,9 @@
 // Variables 
 $color-1: #000;
 $color-2: #252525;
-$color-3: #0E402D;
+$color-5: #aebc3d;
 $color-4: #ffff;
-$color-5: #F6AE2D;
+$color-3: #510e06;
 
 // Normalize 
 *{
@@ -173,12 +173,12 @@ h1{
     a{
         @extend .cv;
         margin-right: 1rem;
-        color: $color-4;
+        color: $color-5;
         border-bottom: 2.5px solid $color-5;
     }
 
     a:hover{
-        color: $color-3;
+        color: $color-4;
         background-color: $color-5;
         transition: 0.2s ease-out;
         border-radius: 3px;
