--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -7,7 +11,7 @@
   font-family: 'Inter', sans-serif;
 }
 
-h2 {
+h2, .h3-skills {
   font-variation-settings: 'wght' 900;
   line-height: 1.1em;
   letter-spacing: -0.045em;
@@ -54,13 +58,40 @@ p {
           box-shadow: none;
 }
 
+.navbar-brand:hover {
+  -webkit-transition: 0.4s ease-in;
+  transition: 0.4s ease-in;
+  -webkit-transform: rotateZ(11deg);
+          transform: rotateZ(11deg);
+}
+
 .nav-link {
   color: #ffff;
   font-size: 0.9rem;
+  display: inline-block;
+  position: relative;
+  font-weight: 600;
+  margin: 0 5px;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  background-color: #510e06;
+  height: 2px;
+  width: 0;
+  left: 0;
+  bottom: 2px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.nav-link:hover::after {
+  width: 100%;
 }
 
 .nav-link:hover {
-  color: #ffff;
+  color: #510e06;
 }
 
 .home {
@@ -120,14 +151,54 @@ h1 span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 30% 50% 20% 40%;
   overflow: hidden;
+  -webkit-animation: transform 20s ease-in-out infinite both alternate;
+          animation: transform 20s ease-in-out infinite both alternate;
+}
+
+@-webkit-keyframes transform {
+  0%,
+  100% {
+    border-radius: 33% 67% 70% 30% / 30% 30% 70% 70%;
+  }
+  20% {
+    border-radius: 37% 63% 51% 49% / 37% 65% 35% 63%;
+  }
+  40% {
+    border-radius: 36% 64% 64% 36% / 64% 48% 52% 36%;
+  }
+  60% {
+    border-radius: 37% 63% 51% 49% / 30% 30% 70% 70%;
+  }
+  80% {
+    border-radius: 40% 60% 42% 58% / 41% 51% 49% 59%;
+  }
+}
+
+@keyframes transform {
+  0%,
+  100% {
+    border-radius: 33% 67% 70% 30% / 30% 30% 70% 70%;
+  }
+  20% {
+    border-radius: 37% 63% 51% 49% / 37% 65% 35% 63%;
+  }
+  40% {
+    border-radius: 36% 64% 64% 36% / 64% 48% 52% 36%;
+  }
+  60% {
+    border-radius: 37% 63% 51% 49% / 30% 30% 70% 70%;
+  }
+  80% {
+    border-radius: 40% 60% 42% 58% / 41% 51% 49% 59%;
+  }
 }
 
 .about {
@@ -139,13 +210,25 @@ h1 span {
   margin-top: 4rem;
 }
 
+.h3-skills {
+  font-size: 1.4rem;
+  margin-top: 2rem;
+}
+
+.skills i {
+  font-size: 2rem;
+  color: #510e06;
+  margin-top: 1rem;
+  padding: 0.5rem;
+}
+
 .projects {
   text-align: center;
   padding: 100px 0;
   background-color: #510e06;
 }
 
-.projects h2, .projects p {
+.projects h2, .projects .h3-skills, .projects p {
   color: #ffff;
 }
 
@@ -259,9 +342,16 @@ h1 span {
   .links a {
     padding-left: 0;
   }
+  .container-3 {
+    width: 75%;
+    margin: auto;
+  }
   .container-2 {
     width: 60%;
     margin: auto;
+  }
+  .skills i {
+    font-size: 2.5rem;
   }
   .contact form {
     width: 60%;
